package com.seproje.hospital.common;

import org.springframework.data.jpa.repository.JpaRepository;

public interface IletisimBilgisiRepository extends JpaRepository<IletisimBilgisi, Integer> {
}